Adjust show product list param docs
